--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -89,6 +89,10 @@
                 </div>
             </div>
         </div>
+        <div class="tab-pane fade show active mb-3" id="tasks" role="tabpanel" aria-labelledby="tasks-tab">
+        </div>
+        <div class="tab-pane fade show active mb-3" id="issues" role="tabpanel" aria-labelledby="issues-tab">
+        </div>
     </div>
 </form>
 {% endblock %}
