Update Floating Labels to Use Theme

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1841,6 +1841,21 @@ pre code {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.form-floating>.form-control-plaintext~label,
+.form-floating>.form-control:focus~label,
+.form-floating>.form-control:not(:placeholder-shown)~label,
+.form-floating>.form-select~label {
+  color: var(--text-color);
+}
+
+.form-floating>.form-control-plaintext~label::after,
+.form-floating>.form-control:focus~label::after,
+.form-floating>.form-control:not(:placeholder-shown)~label::after,
+.form-floating>.form-select~label::after {
+  background-color: var(--body-bg);
+  border-color: var(--body-bg);
+}
+
 @media (prefers-reduced-motion: reduce) {
   .form-control {
     transition: none;
