--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -54,7 +54,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-8">
-                                    <h6 class="card-title">Description</h6>
+                                    <h6 class="card-title text-dark">Description</h6>
                                     {% if PROJECT.description %}
                                         <p>{{ PROJECT.description }}</p>
                                     {% else %}
