--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -56,7 +56,7 @@
                                 <div class="col-md-8">
                                     <h5 class="card-title text-dark">Description</h5>
                                     {% if PROJECT.description %}
-                                        <p>{{ PROJECT.description }}</p>
+                                        <p>{{ PROJECT.description|linebreaks }}</p>
                                     {% else %}
                                         <p>This project does not have a description yet.</p>
                                     {% endif %}
