--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -137,7 +137,7 @@
                                     <li>
                                         {{ log.model_name }} "{{ logObject.name }}" was
                                         {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
-                                            marked as {{ log.changes.status.1 }}.
+                                            marked as {{ log.changes.status.new }}.
                                         {% else %}
                                             Something Else
                                         {% endif %}
