--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -135,10 +135,10 @@
                                 {% for log in PROJECT.get_activity_logs %}
                                     {% with log.model_name|get_object:log.object_id as logObject %}
                                     <li>
-                                        <span class="badge badge-secondary">{{ log.timestamp }}</span> 
+                                        <span class="badge badge-secondary">{{ log.timestamp }}</span>
                                         {{ log.model_name }} "{{ logObject.name }}" was
                                         {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
-                                            marked as {{ log.changes.status.new }}.
+                                            marked as <span class="badge badge-{{ log.get_status_color }}">{{ log.changes.status.new }}</span>.
                                         {% else %}
                                             Something Else
                                         {% endif %}
