--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -130,23 +130,25 @@
                         <div class="card-header">
                             <h4 class="card-title text-white float-left">Project Activity</h4>
                         </div>
-                        <div class="card-body">
-                            <ul class="list-unstyled">
+                        <table class="table table-borderless {% if user.profile.dark_mode %}table-dark{% else %}table-light{% endif %} table-hover">
+                            <tbody>
                                 {% for log in PROJECT.get_activity_logs %}
-                                    {% with log.model_name|get_object:log.object_id as logObject %}
-                                    <li>
-                                        <span class="badge badge-secondary">{{ log.timestamp }}</span>
-                                        {{ log.model_name }} "{{ logObject.name }}" was
-                                        {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
-                                            marked as <span class="badge badge-{{ log.get_status_color }}">{{ log.changes.status.new }}</span>.
-                                        {% else %}
-                                            Something Else
-                                        {% endif %}
-                                    </li>
-                                    {% endwith %}
+                                    <tr>
+                                        <td><span class="badge badge-secondary">{{ log.timestamp }}</span></td>
+                                        <td>
+                                            {% with log.model_name|get_object:log.object_id as logObject %}
+                                                {{ log.model_name }} "{{ logObject.name }}" was
+                                                {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
+                                                    marked as <span class="badge badge-{{ log.get_status_color }}">{{ log.changes.status.new }}</span>.
+                                                {% else %}
+                                                    Something Else
+                                                {% endif %}
+                                            {% endwith %}
+                                        </td>
+                                    </tr>
                                 {% endfor %}
-                            </ul>
-                        </div>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
