--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -134,7 +134,7 @@
                             <tbody>
                                 {% for log in PROJECT.get_activity_logs %}
                                     <tr>
-                                        <td><span class="badge badge-secondary">{{ log.timestamp|time:"Y-m-d I:M:S" }}</span></td>
+                                        <td><span class="badge badge-secondary">{{ log.timestamp|date:"Y-m-d I:M:S" }}</span></td>
                                         <td>
                                             {% with log.model_name|get_object:log.object_id as logObject %}
                                                 {{ log.model_name }} "{{ logObject.name }}" was
