--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -136,14 +136,12 @@
                                     <tr>
                                         <td>
                                             <span class="badge badge-secondary">
-                                                {% with now as current_date %}
-                                                    {% if log.timestamp|date:"Y-m-d" == current_date|date:"Y-m-d" %}
-                                                        Today {{ log.timestamp|date:"g:i:s A" }}
-                                                    {% else %}
-                                                        {{ log.timestamp|date:"Y-m-d g:i:s A" }}
-                                                    {% endif %}
-                                                    <p>{{ current_date|date:"1: Y-m-d" }} {{ log.timestamp|date:"2: Y-m-d" }}</p>
-                                                {% endwith %}
+                                                {% now "Y-m-d" as current_date %}
+                                                {% if log.timestamp|date:"Y-m-d" == current_date|date:"Y-m-d" %}
+                                                    Today {{ log.timestamp|date:"g:i:s A" }}
+                                                {% else %}
+                                                    {{ log.timestamp|date:"Y-m-d g:i:s A" }}
+                                                {% endif %}
                                             </span>
                                         </td>
                                         <td>
