--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -137,13 +137,12 @@
                                         <td>
                                             <span class="badge badge-secondary">
                                                 {% now "Y-m-d" as current_date %}
-                                                {% if log.timestamp|date:"Y-m-d" == current_date|date:"Y-m-d" %}
+                                                {% if log.timestamp|date:"Y-m-d" == current_date %}
                                                     Today {{ log.timestamp|date:"g:i:s A" }}
                                                 {% else %}
                                                     {{ log.timestamp|date:"Y-m-d g:i:s A" }}
                                                 {% endif %}
                                             </span>
-                                            <p>{% now "3: Y-m-d" %} {{ current_date|date:"1: Y-m-d" }} {{ log.timestamp|date:"2: Y-m-d" }}</p>
                                         </td>
                                         <td>
                                             {% with log.model_name|get_object:log.object_id as logObject %}
