--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -137,11 +137,22 @@
                                         <td>
                                             <span class="badge badge-secondary">
                                                 {% now "Y-m-d" as current_date %}
-                                                {% if log.timestamp|date:"Y-m-d" == current_date %}
+                                                {% now "w" as current_weekday %}
+                                                {% with log.timestamp|date:"Y-m-d" as log_date %}
+                                                {% with log.timestamp|date:"w" as log_weekday %}
+                                                {% if log_date == current_date %}
                                                     Today {{ log.timestamp|date:"g:i:s A" }}
+                                                {% elif log_date == current_date|date:"Y-m-d"|add:"-1 day" %}
+                                                    Yesterday {{ log.timestamp|date:"g:i:s A" }}
+                                                {% elif log_date > current_date|date:"Y-m-d"|add:"-7 day" %}
+                                                    {{ current_date|date:"Y-m-d"|date:"-log_date"|timesince }} days ago {{ log.timestamp|date:"g:i:s A" }}
+                                                {% elif log_weekday < current_weekday and log_date > current_date|date:"Y-m-d"|add:"-7 day" %}
+                                                    Last Week {{ log.timestamp|date:"g:i:s A" }}
                                                 {% else %}
                                                     {{ log.timestamp|date:"Y-m-d g:i:s A" }}
                                                 {% endif %}
+                                                {% endwith %}
+                                                {% endwith %}
                                             </span>
                                         </td>
                                         <td>
