--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -161,9 +161,9 @@
                                                 {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
                                                     marked as <span class="badge badge-{{ log.get_status_color }}">{{ log.changes.status.new }}</span>
                                                 {% elif log.action_type == "created" %}
-                                                    was <span class="badge badge-success">created</span>
+                                                    <span class="badge badge-success">created</span>
                                                 {% else %}
-                                                    was <span class="badge badge-danger">deleted</span>
+                                                    <span class="badge badge-danger">deleted</span>
                                                 {% endif %}
                                             {% endwith %}
                                         </td>
