--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -157,7 +157,7 @@
                                         </td>
                                         <td>
                                             {% with log.model_name|get_object:log.object_id as logObject %}
-                                                {{ log.model_name }} "{{ logObject.name }}"
+                                                {{ log.model_name }}{% if log.model_name != "Project" %} "{{ logObject.name }}"{% endif %}
                                                 {% if log.action_type == "updated" and log.changes|length == 1 and log.changes.status %}
                                                     was marked as <span class="badge badge-{{ log.get_status_color }}">{{ logObject.get_status_display }}</span>
                                                 {% elif log.action_type == "updated" %}
